top half index.html styled

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div id="vanity">
         <div id="image-n-caption">
           <img src="img/danial-ricaros-FCHlYvR5gJI-unsplash-reduced.jpg" />
-          <p id="caption">Photo by Danial RiCaRoS on Unsplash</p>
+          <h6 id="caption">Photo by Danial RiCaRoS on Unsplash</h6>
         </div>
         
         <h1>Jonny Appleseed - Web Dev</h1>
